# scorch

./: .gitignore  LICENSE  README.md  build.sbt  scrap.txt
project/: Dependencies.scala  JniBuildPlugin.scala  JniGeneratorPlugin.scala  plugins.sbt
scripts/: download_mnist.sh
src/main/java/generate/: Builder.java  ClassScanner.java  UserClassLoader.java
src/main/java/torch_java/api/: Functions.java  Tensor.java
src/main/java/torch_java/examples/: FourierNet.java
src/main/resources/: logback.xml
src/main/scala/botkop/autograd/: Function.scala  Variable.scala  package.scala
src/main/scala/botkop/nn/: Module.scala  Optimizer.scala  package.scala
src/main/scala/scorch/: package.scala
src/main/scala/scorch/autograd/: Function.scala  Variable.scala  package.scala
src/main/scala/scorch/examples/: DinosaurIsland.scala  DinosaurIslandCharRnn.scala  DinosaurIslandCharRnnLstm.scala
src/main/scala/scorch/nn/: BatchNorm.scala  Dropout.scala  Linear.scala  Module.scala  Optimizer.scala  ParallelModule.scala  Parallelize.scala  ParallelizeModule.scala  Rnn.scala  SimpleModule.scala  WordEmbedding.scala  package.scala
src/main/scala/torch_scala/: Torch.scala
src/native/: CMakeLists.txt  helper.h  java_torch_lib.cpp  jnijavacpp.cpp
src/native/models/: FourierNet.cpp  FourierNet.h
src/test/scala/botkop/: AutoGradSpec.scala  FunctionSpec.scala  ModuleSpec.scala
src/test/scala/scorch/: AutoGradSpec.scala  FunctionSpec.scala  ModuleSpec.scala  RnnSpec.scala  TestUtil.scala  TypeExperiment.scala
src/test/scala/torch_scala/: TestUtil.scala
(+111 files in other folders)
